--- a/resources/stylesheet/main.css
+++ b/resources/stylesheet/main.css
@@ -31,7 +31,6 @@
 /* temporary */
 
 #container-announcement {
-    height: 400px;
     color: black;
     font-size: 64px;
     text-align: center;
@@ -39,33 +38,44 @@
 }
 
 #container-wardrobe {
-    height: 500px;
     width: 1500px;
 
-    white-space: nowrap;
+    border-radius: 25px;
+}
 
-}::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; 
+.container-block {
+    height: 500px;
 }
 
 .wardrobe-item {
     height: 100%;
     width: 300px;
-
+    
     background-color: rgba(255, 255, 255, 1);
 
     display: inline-block;
 
     border-radius: 25px;
 
-    box-shadow: 20px 0px  rgba(200, 200, 200, 1);
+    box-shadow: 5px 0px  rgba(200, 200, 200, 1);
 }
 
 .wardrobe-item:hover {
     background-color:  rgba(220, 220, 220, 0.7);
 
-    box-shadow: 20px 0px  rgba(160, 160, 160, 0.7);
+    box-shadow: 5px 0px  rgba(160, 160, 160, 0.7);
 
     cursor: pointer;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    opacity: 0.7;
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23212529' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+   
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23212529' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
