--- a/resources/stylesheet/main.css
+++ b/resources/stylesheet/main.css
@@ -38,9 +38,11 @@
 }
 
 #container-wardrobe {
-    width: 1500px;
+    width: 100%;
 
-    border-radius: 25px;
+    background-color:  rgba(98, 182, 203, 0.9);
+
+    overflow: hidden;
 }
 
 .container-block {
@@ -48,14 +50,12 @@
 }
 
 .wardrobe-item {
-    height: 100%;
-    width: 300px;
-    
+    height: 80%;
+    width: 250px;
+
     background-color: rgba(255, 255, 255, 1);
 
     display: inline-block;
-
-    border-radius: 25px;
 
     box-shadow: 5px 0px  rgba(200, 200, 200, 1);
 }
