--- a/resources/stylesheet/main.css
+++ b/resources/stylesheet/main.css
@@ -42,30 +42,25 @@
     background-color:  rgba(98, 182, 203, 0.7);
     overflow: hidden;
     height: 500px;
-    position: absolute;
-    
 }
 
 .container-block {
     height: 500px;
-    position: relative;
+    width: 100%;
+
+    overflow: hidden;
 }
 
 .wardrobe-item {
-    height: 80%;
     width: 250px;
-    top: 0px;
-    left: 0px;
+    float: left;
     background-color: rgba(255, 255, 255, 1);
-    box-shadow: 5px 0px  rgba(200, 200, 200, 1);
 
-    transition: width;
-    transition-duration: 1s;
+    transition: width 1s;
 }
 
 .wardrobe-item:hover {
     background-color:  rgba(220, 220, 220, 1);
-    box-shadow: 5px 0px  rgba(160, 160, 160, 1);
     cursor: pointer;
 }
 
