--- a/resources/stylesheet/video.css
+++ b/resources/stylesheet/video.css
@@ -1,10 +1,21 @@
-.center {
-    margin-left: auto;
-    margin-right: auto;
-    display: block
+body {
+    position: relative;
+    height: 100vh;
+    margin: 0;
 }
 
 video {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
+
+.center {
+    position: absolute;
+    padding: 20px;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+
